--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
+    "react-hook-form": "^7.49.2",
     "react-icons": "^4.12.0",
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
@@ -25,6 +26,7 @@
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.10.2",
     "swiper": "^11.0.5"
   },
   "devDependencies": {
